Add test case for compact object headers, increase pressure on old generation